Refactor MethodAnalysisHelper